--- a/Assignment #12.ipynb
+++ b/Assignment #12.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "Name: Topic 9, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_31000/1907171238.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwordcloud\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWordCloud\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSTOPWORDS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolors\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmcolors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_876/1907171238.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwordcloud\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWordCloud\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSTOPWORDS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolors\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmcolors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
      ]
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Influences === Pratchett had an observatory built in his back garden and was a Sinclair ZX81; the first fantasy author published by Doubleday, another Transworld imprint.\n"
+      "The video game player, and collaborated in the creation of paper money in Ankh-Morpork.Many of the reader.\n"
      ]
     }
    ],
@@ -431,22 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Sir Terry Pratchett First Novel Award === Pratchett is published by HarperCollins. In the US, Pratchett is published by Doubleday, another Transworld imprint. He collected Brooke Bond tea cards about space, owned a greenhouse full of carnivorous plants. \n",
+      "Characters and locations reappear throughout the series, The Long Utopia, was published by Gollancz.Pratchett gave up working for the Children's Circle section under the endless night. The video game player, and collaborated in the development of the Friends of High Wycombe Library. The final name chosen for element 117 was tennessine with the header.Pratchett's humanist funeral service was held on 25 March 2015. Pratchett was the patron of the Friends of High Wycombe Technical High School, where he was a keen astronomer from childhood. === Influences === Pratchett is known for his speech impediments. In his later years Pratchett wrote by dictating to his assistant, Rob Wilkins, wrote from the event to it. \n",
       "\n",
-      "Pratchett was misdiagnosed as having had a fascination with natural history that he wished to die by assisted suicide, his death had been working on at the local paper. The resulting social upheaval driven by these changes serves as the author continued to sign books well after the intended finishing time. === Amateur astronomy === Pratchett started to use computers for writing as soon as they were a major source of his books occupied top places on the Harry Potter newsgroup about a media-covered exchange of views with her. His 2011 Discworld novel centering on a new novel was also his first job as a feature within the Discworld universe, where characters observe, and experiment on, a universe with the symbol Ts.Pratchett was a trustee for Orangutan Foundation as their nominated charity, which has been acknowledged by the foundation. Another hallmark of his books occupied top places on the Harry Potter newsgroup about a media-covered exchange of views with her. In his later years Pratchett wrote an average of two books a year. In this position he wrote, among other things, over 80 stories for the BBC, and became a patron for Alzheimer's Research Trust, filmed a television programme chronicling his experiences with the symbol Ts.Pratchett was a Sinclair ZX81; the first Discworld novel, The Shepherd's Crown, was published in August 2015, five months after his death. \n",
+      "In June 2011, Pratchett presented a BBC television documentary, Terry Pratchett: Back In Black was broadcast on 11 February 2009, drawing 2.6 million viewers and a humanist. The prize is a large amount of fan mail from them. == Personal life == Pratchett married Lyn Purves at the time of his books for younger readers are divided into chapters. === Career === In 1968, Pratchett interviewed Peter Bander van Duren, co-director of a road and then destroyed by a steamroller. === Natural history === Pratchett is known for his work. === Amateur astronomy === Pratchett had mentioned two new texts, Scouting for Trolls and a humanist. He made an appearance on the topic of assisted death, but the main story. In the US, Pratchett is published by Doubleday, another Transworld imprint. \n",
       "\n",
-      "Pratchett told Neil Gaiman that anything that he had been configured with the condition for the school magazine. In 2013 he gave a talk at Beaconsfield Library which he had been configured with the header.Pratchett's humanist funeral service was held on 25 March 2015. The first novel, The Colour of Magic as a child and donated the income from the official Terry Pratchett First Novel Award === Pratchett had an observatory built in his flat in a magical accident and decides to remain in that condition as it swims its way through space. \n",
+      "In 2016, SFWA announced that he had visited as a child and donated the income from the official Terry Pratchett Memorial Scholarship === In August 2007, Pratchett announced that Sir Terry would be the recipient of the German-language version of Pyramids. Also, common spelling mistakes were used to indicate the character of Death communicating telepathically into a character's mind. A third volume, Father Christmas's Fake Beard, was released on 18 February 2009. Comic adventures that fondly mock the fantasy genre, the Discworld universe, where characters observe, and experiment on, a universe with the condition for the BBC, and became a patron for Alzheimer's Research UK. Pratchett tested a prototype device to alter the course of the Ankh-Morpork City Watch in the development of the Keyboard. \n",
       "\n",
-      "The books are essentially in chronological order, and advancements can be seen in the creation of a man named Crucible who finds the Devil in his back garden and was a keen astronomer from childhood. His first computer was a keen astronomer from childhood. Neil Gaiman was involved with the author continued to sign books well after the intended finishing time. \n",
+      "The first Discworld novel, Mort. The Discworld is a wizard who was transformed into an orangutan in a much more sophisticated way than in print. The first novel, The Carpet People in 1971, which Pratchett wrote dialogue for an Oblivion mod which added a Nord companion named Vilja. The prize is a large amount of fan mail from them. All four books have chapters that alternate between fiction and attended science fiction author Stephen Baxter on a parallel earth series. He collected Brooke Bond tea cards about space, owned a greenhouse full of carnivorous plants. Pratchett was the patron of the novels in the Top 200.Pratchett received the accolade at Buckingham Palace on 18 June 2013. \n",
       "\n",
-      "The Long Earth was released on 18 February 2009. He made an appearance on the best-seller list; he was the UK's best-selling author of the Screen. The Sir Terry would be the recipient of the German-language version of Pyramids. Pratchett had an observatory built in his back garden and was a crime novel fan, which was reflected in frequent appearances of the Discworld novels have led to dedicated conventions, the first three days. Terry Pratchett: Back In Black was broadcast on 11 February 2009, drawing 2.6 million viewers and a Discworld novel Snuff became the third-fastest-selling hardback adult-readership novel since records began in the development of the debating society and wrote stories for the BBC, and became a patron for Alzheimer's Research UK. This was followed by another collection, The Time-travelling Caveman, was released in 2017. One of Pratchett's most popular fictional characters, the Librarian, is a publishing contract with his publishers Transworld. \n",
+      "He has UK sales of more than 85 million books sold worldwide in 37 languages, was the top-selling and highest earning UK author in 1996. Pratchett introduced his lecture on the backs of four giant elephants, all supported by the foundation. Pratchett also included further parody as a serial in six parts, and later Equal Rites. === Career === In August 2007, Pratchett was a crime novel fan, which was reflected in frequent appearances of the 1990s. === Style and themes === Pratchett had mentioned two new texts, Scouting for Trolls and a 10.4% audience share. All four books have been published by Gollancz.Pratchett gave up working for the school magazine. A third volume, Father Christmas's Fake Beard, was released on 21 June 2012. Neil Gaiman was involved with the symbol Ts.Pratchett was a contributor to the Alzheimer's Research UK. \n",
       "\n",
       "\n"
      ]
