--- a/Assignment #12x.ipynb
+++ b/Assignment #12x.ipynb
@@ -22,6 +22,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "“GLITCH a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity” (Benjamin 77).\n",
+    "“Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \n",
+    "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). \n",
+    "“The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). \n",
+    "“Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86).\n",
+    "\n",
+    "“ Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). \n",
+    "\n",
+    "\"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172).\n",
+    "\n",
+    "\"The most basic interface is the Command Line Interface. Almost all desk\u0002top computers have a “terminal” utility that allows you to work in this \n",
+    "mode\" (Drucker 173).\n",
+    "\n",
+    "\"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates\n",
+    "between an individual the computational activity\" (Drucker 176).\n",
+    "\n",
+    "\"The notion of “cognitive load” (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
+    "\n",
+    "\"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media). Interfaces are often built on metaphors of windows or desktops, but they also contain assumptions about users\" (Drucker 181).\n",
+    "\n",
+    "\"An interface constructs a narrative\" (Drucker 183).\n",
+    "\n",
+    "\"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188).\n",
+    "\n",
+    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190).\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Stage One: Collect and import ten documents (novels work best, but anything goes!)\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
@@ -110,6 +147,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The following block  of code employs scikit-learn’s CountVectorizer to construct a document-term  matrix for the 34,677 opinions in the corpus. To make the computation process  and the subsequent analysis of the fitted model easier, we will ignore case by  lowercasing all words and exclude from our vocabulary (rare) words occurring  in fewer than 100 texts (about 0.3% of documents). We will also exclude very  common words (i.e., “stop words”) using an English stop words list packaged  with scikit-learn. Although removing low-frequency words and stop words is  neither necessary nor recommended (Schofield, Magnusson, and Mimno 2017),  we remove the words, in this pedagogical setting, to reduce the considerable  time required to fit the topic model.  import sklearn.feature_extraction.text as text  #min_df: ignore words occurring in fewer (Karsdorp, Kestemont, Riddell 297). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -142,6 +186,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"As with the mixture model, there are several strategies for estimating the parameters of a mixed-membership model. Here, we will use the implementation  packaged by scikit-learn which is available in the class, LatentDirichletAllocation. This implementation uses an approximation strategy known as  variational inference to estimate the model’s parameters.15 As was the case with  the mixture model, the parameters which are estimated are those associated  with the latent distributions, φ1:K, which we will refer to as the “topic-word  distributions” and the mixing weights for each document, θ1:D, which we will  refer to as the “document-topic distributions.”  import sklearn.decomposition as decomposition  model = decomposition.LatentDirichletAllocation(  n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -156,6 +207,13 @@
     "assert model.components_.shape == (100, len(vocabulary))\n",
     "# (# documents, # topics)\n",
     "assert document_topic_distributions.shape == (dtm.shape[0], 100)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Since every parameter is associated with a topic and either a vocabulary  element or a document, it will be convenient to make this association explicit  by converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). "
    ]
   },
   {
@@ -228,6 +286,13 @@
     "topic_word_distributions = pd.DataFrame(\n",
     "    model.components_, columns=vocabulary, index=topic_names)\n",
     "print(topic_word_distributions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"At this point, we can refer to the document-specific set of K mixing weights  using the same index we used to examine the text of the opinions. In a related  fashion, we can refer to the parameters of the latent probability distributions  over the vocabulary by the topic name. The following block shows how we  can extract the mixing weights associated with Justice Murphy’s dissent. For  the sake of brevity, we will extract the first ten weights.  document_topic_distributions.loc['323 US 214'].loc['murphy'].head(10)\" (Karsdorp, Kestemont, Riddell 301). "
    ]
   },
   {
@@ -433,6 +498,13 @@
    "source": [
     "words = topic_word_distributions.loc['Topic 9'].sort_values(ascending=False).head(18)\n",
     "words "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"population. Our mixed-membership  model gives us measurements of the mixing weights—technically speaking,  point-estimates of parameters—interpretable as the estimated proportions of  words associated with latent distributions in a single opinion. Taken by itself,  these proportions do not capture information about the length of an opinion.  And we might reasonably expect to distinguish between a 14,000-word opinion  in which 50% of the words are associated with a topic and an opinion which  is 500 words and has the same proportion associated with the topic.  Our recommended solution here is to take account of document length by  plotting, for each year, the proportion of all words in all opinions associated  with a given topic. We can, in effect, calculate the total number of words in  all opinions published in a given year associated with a topic by multiplying  opinion lengths by the estimated topic shares. Finally, to make years with different numbers of opinions comparable, we can divide this number by the total  number of words in opinions from that year\" (Karsdorp, Kestemont, Riddell 315). "
    ]
   },
   {
