--- a/Assignment #12xx.ipynb
+++ b/Assignment #12xx.ipynb
@@ -21,9 +21,13 @@
    "metadata": {},
    "source": [
     "“GLITCH a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity” (Benjamin 77).\n",
+    "\n",
     "“Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \n",
+    "\n",
     "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). \n",
+    "\n",
     "“The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). \n",
+    "\n",
     "“Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86).\n",
     "\n",
     "“ Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). \n",
@@ -44,13 +48,7 @@
     "\n",
     "\"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188).\n",
     "\n",
-    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190).\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190)."
    ]
   },
   {
